Improve render performance of header by removing invisible text-shadow, Fix floating images after ISL part

--- a/less/header.less
+++ b/less/header.less
@@ -68,7 +68,6 @@
   &_teaser,
   &_mobile-headline {
     color: @font-color-image;
-    text-shadow: 0 0 1px rgba( 0, 0, 0, .5 );
   }
 
   &_mobile-headline {
@@ -76,20 +75,20 @@
   }
 
   &_teaser {
-    border-top: 1px solid white;
+    border-top: 1px solid rgba( 255, 255, 255, .6 );
     font-family: @base-font-sans;
     font-size: 1.2rem;
     line-height: 1.4;
     margin: 0 auto;
     max-width: 48rem;
-    padding-top: 1.8rem;
+    padding-top: 1.4rem;
     text-align: center;
   }
 
   &_headline,
   &_mobile-headline {
     font-family: @headline-font;
-    font-size: 3.8rem;
+    font-size: 3.2rem;
     font-weight: normal;
     margin: 0 0 1rem 0;
   }
